--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 pixalate_venv/
-data/data.csv
-data/client_1_data.csv
-data/client_2_data.csv
-data/client_3_data.csv
-data/client_4_data.csv
-data/client_5_data.csv
+pixalate/data/data.csv
+pixalate/data/client_1_data.csv
+pixalate/data/client_2_data.csv
+pixalate/data/client_3_data.csv
+pixalate/data/client_4_data.csv
+pixalate/data/client_5_data.csv
